19 May 2009: Matthijs
	- Clean up configure script
	- Remove unnecessary LLONG_MIN and LLONG_MAX code.
	- Replace strtoll code with own strtoserial function.
	- Move up to 3.2.3.

11 May 2009: Matthijs
	- Add Off-by-one test

6 May 2009: Matthijs
	- Small fix in SO_REUSEADDR warning log message.
	- Off-by-one bugfix (thanks Ilja van Sprundel, IOActive)

29 April 2009: Matthijs
	- A more ensured do_stop (useful fo nsdc restart).

2 February 2009: Matthijs
	- Bugfix #234.
	- Bugfix #235.
	- Reset 'error occurred' after notifying an error occurred at the $TTL or   
		$ORIGIN directive (Otherwise, the whole zone is skipped because the
		error is reset after reading the SOA).

2 February 2009: Matthijs
	- Bugfix: return BADVERS when EDNS version > 0, instead of 0x1<FORMERR>.

19 January 2009: Matthijs
	- Bug 230: nsd-*: use stdout for non-error output (instead of stderr).
	- Don't do strptime test when cross compiling.

17 January 2009: Jelte
	- Fix file rotation when no logfile but chroot.

8 January 2009: Matthijs
	- New nsd-patch option -o dbfile (set output.db)
	- update nsdc to deal with the new nsd-patch options
	- strptime compat fix

6 January 2009: Matthijs
	- New nsd-patch option -s (skip writing zonefiles)
	- Removed some region_create memchecks (not needed)

5 January 2009: Matthijs
	- Bug 218
	- Bug 222
	- Replace SHA256_DIGEST_LENGTH with nicer HAVE_EVP_SHA256

10 December 2008: Matthijs
	- Bugfix: better error message when ixfr.db cannot be read

18 November 2008: Matthijs
	- chown logfile, don't do file rotation if logfile is outside absolute 
		and outside chroot.

17 November 2008: Matthijs
	- File rotation for nsd.log when owned by nsd (+ tpkg test).
	- Only AXFR fallback if master responded NOTIMPL or FORMATERR on IXFR 
		request.
	- allow-axfr-fallback option.

7 November 2008: Matthijs
	- Bugfix: don't fclose if logfile == NULL.
	
30 October 2008: Matthijs
	- Allow escape characters in literal dnames
	- Fix typo in zonec manpage