@@ -1,3 +1,7 @@
+15 June 2009: Matthijs
+	- Add configure option, that allows to return FORMERR when receiving EDNS0
+		query with UDP limit < 1220.
+
 19 May 2009: Matthijs
 	- Clean up configure script
 	- Remove unnecessary LLONG_MIN and LLONG_MAX code.
